force-app/main/default/objects/Match__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the group in which the match is played (for group stage matches).</description>
    <label>Group</label>
    <referenceTo>Group__c</referenceTo>
    <relationshipLabel>Matches</relationshipLabel>
    <relationshipName>Matches</relationshipName>
    <type>Lookup</type>
</CustomField>