force-app/main/default/objects/Match__c/fields/Team_1__c.field-meta.xml
<CustomField>
    <fullName>Team_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team 1</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Matches</relationshipLabel>
    <relationshipName>Matches</relationshipName>
    <type>Lookup</type>
</CustomField>