force-app/main/default/objects/Match__c/fields/Team_2__c.field-meta.xml
<CustomField>
    <fullName>Team_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team 2</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Matches (Team 2)</relationshipLabel>
    <relationshipName>Matches1</relationshipName>
    <type>Lookup</type>
</CustomField>