force-app/main/default/objects/Match__c/fields/Tournament__c.field-meta.xml
<CustomField>
    <fullName>Tournament__c</fullName>
    <description>Reference to the tournament the match belongs to.</description>
    <label>Tournament</label>
    <referenceTo>Tournament__c</referenceTo>
    <relationshipLabel>Matches</relationshipLabel>
    <relationshipName>Matches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>