force-app/main/default/objects/Match__c/validationRules/Group_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Group_Required</fullName>
    <active>true</active>
    <description>Group field is required when we are on Group Stage</description>
    <errorConditionFormula>AND(ISPICKVAL( Round__c , &apos;Group Stage&apos;),  ISBLANK( Group__c ) )</errorConditionFormula>
    <errorDisplayField>Group__c</errorDisplayField>
    <errorMessage>Group field is required on Group Stage</errorMessage>
</ValidationRule>