force-app/main/default/objects/Match__c/validationRules/Score_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Score_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>( AND(Match_Date__c &gt;  NOW(),    OR(NOT(ISBLANK( Team_1_Score__c )),NOT(ISBLANK( Team_2_Score__c  )))   ) )</errorConditionFormula>
    <errorMessage>Cannot set score of a match until the game is already done.</errorMessage>
</ValidationRule>